--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@types/node": "^22.10.5",
     "typescript": "^5.7.3"
-  }
+  },
+  "dependencies": {
+    "immer": "^10.1.1",
+    "undici-types": "^6.20.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iroha36/typescript-practice.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iroha36/typescript-practice/issues"
+  },
+  "homepage": "https://github.com/iroha36/typescript-practice#readme",
+  "description": ""
 }
